examples/ok/assert_builtin.bina
// OK: assert builtin typing.
fn main() -> int {
    assert(true);
    assert(1 < 2);
    return 0;
}
