examples/fail/semantic/int_literal_out_of_range_binary.bina
// EXPECT_SEMANTIC_ERROR: out of range for int8
fn main() -> int {
    let x: int8 = 0b10000000;
    return 0;
}
